feat: add labeled satellite basemaps
